K8S/app-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: rec-sys-service
spec:
  selector:
    app: rec-sys
  ports:
  - protocol: TCP
    port: 90
    targetPort: 80
  type: NodePort
