K8S/pred-ext-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictionservice
spec:
  type: ClusterIP
  ports:
    - port: 5003
      targetPort: 5003
---
kind: Endpoints
apiVersion: v1
metadata:
  name: predictionservice
subsets:
  - addresses:
    - ip: 127.0.0.1
    ports:
      - port: 5003
