K8S/recommendation-system-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-system-srv
spec:
  type: NodePort
  selector:
    app: recommendationsystem
  ports:
  - name: recommendationsystem
    protocol: TCP
    port: 80
    targetPort: 80
